Added support for the new cobbler module.
This patch removes the previous cobbler implementation. The
new implementation relies on hiera, which is processed by puppet-coe.
It also modifies hiera to read the new data/hiera_data/cobbler
directory, and the build.yaml profile

--- a/templates/hiera.erb
+++ b/templates/hiera.erb
@@ -17,6 +17,9 @@
   - "install_tempest/%{install_tempest}"
   - "cinder_backend/%{cinder_backend}"
   - "glance_backend/%{glance_backend}"
+  - cobbler/distro
+  - cobbler/profile
+  - cobbler/system
   - "rpc_type/%{rpc_type}"
   - "db_type/%{db_type}"
   - "tenant_network_type/%{tenant_network_type}"
